# TSPAlgorithmsComparison

./: .gitignore  Algorithm.cpp  Algorithm.h  BranchAndBound.cpp  BranchAndBound.h  BruteForce.cpp  BruteForce.h  CMakeLists.txt  Edge.cpp  Edge.h  Genetic.cpp  Genetic.h  Program.cpp  Program.h  README.md  SimulatedAnnealingSolution.cpp  SimulatedAnnealingSolution.h  SimulatedAnnealingSolver.cpp  SimulatedAnnealingSolver.h  TabuSearch.cpp  TabuSearch.h  Test.cpp  Test.h  TravellingSalesmanProblem.cpp  TravellingSalesmanProblem.h
docs/: environment-setup.md  graph1.gv  report.md  results.xlsm  test-1541687560.txt  test-1541687893.txt
docs/real-use-case-project/: report.docx  stronatytulowa.docx
docs/real-use-case-project/notes/: test-params.md
docs/real-use-case-project/seminar-slides1/: slides1-gantt-chart.xlsx  slides1-speech-notes.md
docs/real-use-case-project/seminar-slides2/: ordered-crossover.rtf  slides2-gantt-chart.xlsx  slides2-speech-notes.md  slides2.pptx
docs/report-final/: report-final.md
docs/report-final/test-results/: results.xlsx  test-1547717839.txt
docs/report-stage1/graphs/: graph2.gv
docs/report-stage1/test-results/: results.xlsm
docs/report-stage2/: report-stage2.md  test-1543431556.txt
tests/atsp/: best.txt  data17.txt  data323.txt  data34.txt  data358.txt  data36.txt  data39.txt  data403.txt  data43.txt  data443.txt  data45.txt  data48.txt  data53.txt  data56.txt  data65.txt  data70.txt  data71.txt
tests/real/: 12-1.txt  12-2.txt  17.txt  24.txt  31.txt  50.txt
tests/small/: best.txt
(+8 files in other folders)
